--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     </script>
                     <br> i'am <span>Prashant</span><br>web developer
                 </p>
-                <a href="#contact" target="_blank"><button class="contact-btn">Download CV</button></a>
+                <a href="assets/Prashant RaghuvanshiCV1.pdf" target="_blank"><button class="contact-btn">Download CV</button></a>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/prashant-raghuvanshi-270959169/" target="_blank"><img
                             src="assets/linkedin.png" alt="linkedin"></a>
